# battery-system

./: .gitignore  README.md
battery-management-system/: _autosave-battery-management-system.kicad_pcb  _autosave-battery-management-system.kicad_sch  battery-management-system.csv  battery-management-system.kicad_pcb  battery-management-system.kicad_prl  battery-management-system.kicad_pro  battery-management-system.kicad_sch  battery-management-system.xml  battery_pack.kicad_sch  cell_balancing.kicad_sch  cell_measurement.kicad_sch  charger.kicad_sch  design_errors_r01.txt  interconnect.kicad_sch  mcu.kicad_sch  power_supply.kicad_sch  temperature_sensors.kicad_sch  usb.kicad_sch  ~battery-management-system.kicad_pcb.lck
calculations/: battery_system.ods  boost_converter_12V_24V.ods
casing/: casing-cells.stl  casing-complete_base.stl  casing-complete_lid.stl  casing.FCStd
software/battery_management_system/: CMakeLists.txt  Kconfig  prj.base.conf  prj.debug.conf  prj.release.conf
software/battery_management_system/dts/bindings/: benediktibk,cell-balancer.yaml  benediktibk,cell-voltage.yaml  benediktibk,cells-measurement.yaml  benediktibk,power-control.yaml  benediktibk,status-leds.yaml
software/battery_management_system/include/: cell_balancer.h  cell_voltage.h  cells_measurement.h  power_control.h  status_leds.h
software/battery_management_system/src/: cell_balancer.c  cell_balancer_shell.c  cell_voltage.c  cell_voltage_shell.c  cells_measurement.c  cells_measurement_shell.c  main.c  power_control.c  power_control_shell.c  status_leds.c  status_leds_shell.c
(+107 files in other folders)
